add more questions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,10 +27,8 @@
           v.onload = function() {
             window.voiceflow.chat.load({
             verify: { projectID: '672b17811891ba0bf93f7b5c' }, //insurecanTalk
-            //verify: { projectID: '66c367ef77162a334f4bf64f' }, // Demo origin
-            //verify: { projectID: '67392ea7b70f142a7a42ec86' }, // copy from demo 
             url: 'https://general-runtime.voiceflow.com',
-            versionID: 'development',
+            versionID: 'production',
             user: {
               name: 'Demo User',
             },
